First commited as after_68055_rev1