@@ -76,7 +76,7 @@ public final class PreferencesAdapter extends PropertyMapAdapter {
         }
 
         if (propertyType == Integer.class) {
-            return new Integer(store.getInt(propertyId));
+            return Integer.valueOf(store.getInt(propertyId));
         }
 
         if (propertyType == Long.class) {
