@@ -40,7 +40,7 @@ public class WorkbenchErrorHandler extends AbstractStatusHandler {
 	@Override
 	public void handle(final StatusAdapter statusAdapter, int style) {
 		statusAdapter.setProperty(WorkbenchStatusDialogManager.HINT,
-				new Integer(style));
+				Integer.valueOf(style));
 		if (((style & StatusManager.SHOW) == StatusManager.SHOW)
 				|| ((style & StatusManager.BLOCK) == StatusManager.BLOCK)) {
 
